# tiny-std-deprecated

./: .clang-tidy  .gitignore  CMakeLists.txt  LICENSE  README.md
doc/: any.md  functional.md  memory.md  span.md  vector.md
src/: any.hpp  concepts.hpp  fixed_capacity_vector.hpp  functional.hpp  memory.hpp  small_size_optimized_vector.hpp  smart_pointers.hpp  span.hpp  vector.hpp
src/smart_pointers/: shared_ptr.hpp  unique_ptr.hpp
test/: CMakeLists.txt  any.cpp  concepts.cpp  functional.cpp  shared_ptr.cpp  smart_pointers.cpp  span.cpp  test_functional.cpp  unique_ptr.cpp  vector.cpp
